--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,11 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from "../components/Greeting";
+const pageTitle = "Home Page";
 
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>My astro page</title>
-	</head>
-	<body>
-		<h1>My astro page</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>My awesome blog subtitle</h2>
+	<!-- <Greeting messages={['HI', 'HELL']} /> -->
+	<Greeting client:load messages={['shit', 'fvck']} />
+</BaseLayout>
